add search by clip functionality

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,9 +11,18 @@
   transform: translate(-50%, -50%);
 }
 
-.input-image {
-  width: 30%;
-  margin-left: 35%;
+.upload-to-search-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  gap: 5px;
+}
+
+.input-image,
+.input-video {
+  flex: 0 1 auto;
+  width: 22%;
 }
 
 .jobs-table {
